# sdk_support

./: .properties  .restyled.yaml  README.md  gecko_sdk.slcs  generate_boards.py
.github/: CODEOWNERS
.github/workflows/: close_pull_request.yml  github.yml
app/zcl/: ami-devices.xml  ami.xml  cba-devices.xml  cba.xml  general-thread.xml  general.xml  green-power-devices.xml  green-power.xml  ha-devices.xml  ha-thread.xml  ha.xml  hc-devices.xml  hc.xml  lo-devices.xml  manufacturers.xml  ota-dotdot.xml  ota.xml  relay-control.xml  sample-extensions.xml  silabs.xml  sleeping-mesh.xml  ta-devices.xml  ta.xml  types.xml  wwah-silabs-devices.xml  z3-nfr.xml  zll-devices.xml  zll-thread.xml  zll.xml
hardware/board/component/: bg22-ek4108a.slcc  bgm220-ek4314a.slcc  board_control.slcc  brd2001a.slcc  brd2010a.slcc  brd2012a.slcc  brd2100a.slcc  brd2102a.slcc  brd2200a.slcc  brd2201a.slcc  brd2204a.slcc  brd2207a.slcc  brd2400a.slcc  brd2500a.slcc  brd2501a.slcc  brd2503a.slcc  brd2504a.slcc  (+375 more)
hardware/kit/: hwconf.xml
matter/efr32/: sl_component_catalog.h  sl_device_init_clocks.c  sl_event_handler.c
matter/efr32/mgm24/BRD4319A/matter-platform_cmake/: CMakeLists.txt  CMakePresets.json  matter-platform.cmake  toolchain.cmake
matter/wifi/: brd4161a.h  brd4180a.h  brd4186c.h  brd4187c.h  dhcp_client.cpp  dhcp_client.h  ethernetif.cpp  ethernetif.h  lwip_netif.cpp  wfx_host_events.h  wfx_notify.cpp
meta/: modules.yaml
platform/: release-highlights.txt
platform/base/: base-version.h  modules.xml
platform/bootloader/: CHANGELOG.md  esf.properties
platform/emlib/: emlib_core_validation.py
platform/hwconf_data/: halconfig.properties  hwconfig.hwdata  stack-release-filelist-hwconf_data.txt
platform/micrium_os/: micrium-cano-docs.xml  micrium-cano.properties  micrium-fsxx-docs.xml  micrium-fsxx.properties  micrium-ioxx-docs.xml  micrium-ioxx.properties  micrium-krnx-docs.xml  micrium-krnx.properties  micrium-tcpx-docs.xml  micrium-tcpx.properties  micrium-usbd-docs.xml  micrium-usbd.properties  micrium-usbh-docs.xml  micrium-usbh.properties
scripts/: array_script.py  copy_librairies.py  generate_boards.py
util/plugin/: plugin.info
(+12202 files in other folders)
